Kleenup US10578 fix no devices found page 	US10677 fix the services setup icon 	fix the leader board alignment 	fix the badges in the customer table 	cleanup webex look

--- a/app/modules/core/customers/customerOverview/_customer-overview.scss
+++ b/app/modules/core/customers/customerOverview/_customer-overview.scss
@@ -1,5 +1,9 @@
 .customer-overview {
 
+  .button-container {
+    left: -1px;
+  }
+
   .trial-bar {
     margin-bottom: 1.5rem;
   }
